--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,16 @@
     box-sizing: border-box;
 }
 
-#army-image img {
+#armyImage img {
     width: 30%;
     display: block;
     margin-right: auto;
     margin-left: auto;
 }
 
-#army-name {
+#armyName {
     font-family: "Grenze Gotisch", serif;
     font-size: 50px;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     text-align: center;
@@ -43,19 +42,36 @@ body {
     font-style: normal;
 }
 
-.mission select {
+select {
     appearance: none;
     background-color: transparent;
     border: none;
     margin: 0;
     padding: 0;
-    width: 92%;
     font-family: inherit;
     font-size: inherit;
     cursor: inherit;
     line-height: inherit;
     color: inherit;
 }
+
+select.armySelect {
+    text-align: center;
+}
+
+select.armySelect option {
+    font-size: 30px;
+}
+
+select.armySelect:invalid {
+    color:#4e4e4e;
+    font-size: smaller;
+}
+
+select.missionSelect {
+    width: 92%;
+}
+
 .mission select:invalid {
     color:#5d5d4e;
     font-size: smaller;
@@ -63,6 +79,21 @@ body {
 
 #turnList {
     padding: 0 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.turn {
+    width: 48%;
+    font-size:47%;
+    margin: 0;
+}
+
+.turn:first-of-type {
+    width: 100%;
+    font-size: 100%;
+    margin: 0;
 }
 
 .turnNumber {
@@ -91,6 +122,7 @@ body {
   color: inherit;
   font: inherit;
   text-align: right;
+  caret-color: #646060;
 }
 
 .score:focus {
