--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,47 @@ body {
     font-style: normal;
 }
 
+.mission select:invalid {
+    color:#5d5d4e;
+    font-size: smaller;
+}
+
+.mission button {
+  border: inherit;
+  background-color: inherit;
+  color: #997;
+  font: inherit;
+  font-size: smaller;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  width: 100%;
+}
+
+.mission {
+    background-color: #2e2e2e;
+    color: #ddddaa;
+    border-radius: 5px;
+    padding: 1px 8px;
+    margin-bottom: 4px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.score {
+  width: 12%;
+  background: inherit;
+  border: none;
+  color: inherit;
+  font: inherit;
+  text-align: right;
+  caret-color: #646060;
+}
+
+.score:focus {
+    outline: none;
+}
+
 select {
     appearance: none;
     background-color: transparent;
@@ -72,22 +113,6 @@ select.missionSelect {
     width: 92%;
 }
 
-.mission select:invalid {
-    color:#5d5d4e;
-    font-size: smaller;
-}
-
-.mission button {
-  border: inherit;
-  background-color: inherit;
-  color: #997;
-  font: inherit;
-  font-size: smaller;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  width: 100%;
-}
 #turnList {
     padding: 0 1em;
     display: flex;
@@ -116,30 +141,6 @@ select.missionSelect {
     margin-bottom: 4px;
 }
 
-.mission {
-    background-color: #2e2e2e;
-    color: #ddddaa;
-    border-radius: 5px;
-    padding: 1px 8px;
-    margin-bottom: 4px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.score {
-  width: 12%;
-  background: inherit;
-  border: none;
-  color: inherit;
-  font: inherit;
-  text-align: right;
-  caret-color: #646060;
-}
-
-.score:focus {
-    outline: none;
-}
-
 ul {
     list-style-type: none;
     padding: 0;
@@ -150,4 +151,60 @@ ul {
     font-size: 40px;
     font-weight: 600;
     text-align: center;
+}
+
+.modal-background {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9998;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  z-index: 9999;
+  flex-direction: column;
+  overflow-y: hidden;
+}
+.modal > p {
+  padding: 15px;
+  margin: 0;
+}
+.modal-header {
+  background-color: #f9f9f9;
+  border-bottom: 1px solid #dddddd;
+  box-sizing: border-box;
+  height: 50px;
+}
+.modal-header h3 {
+  margin: 0;
+  box-sizing: border-box;
+  padding-left: 15px;
+  line-height: 50px;
+  color: #4d4d4d;
+  font-size: 16px;
+  display: inline-block;
+}
+.modal-header label {
+  box-sizing: border-box;
+  border-left: 1px solid #dddddd;
+  float: right;
+  line-height: 50px;
+  padding: 0 15px 0 15px;
+  cursor: pointer;
+}
+.modal-header label:hover img {
+  opacity: 0.6;
+}
+.modal-body {
+  height: 100%;
 }
